# diploma_project_3

./: .docker_env  .env  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: action.yml
bot/: admin.py  models.py  serializers.py  urls.py  views.py
bot/management/commands/: runbot.py
bot/tg/: Telebot.py  client.py  dc.py
core/: models.py
goals/migrations/: 0003_alter_goal_priority_alter_goal_status_goalcomment.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
todolist/: settings.py
