[tool.poetry]
name = "diploma-project-3"
version = "0.1.0"
description = "test"
authors = ["tidus <tidussss@yandex.ru>"]
readme = "README.md"
packages = [{include = "diploma_project_3"}]

[tool.poetry.dependencies]
python = "3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
